--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -51,9 +51,16 @@ Layout/SpaceInsideBlockBraces:
 Style/BracesAroundHashParameters:
   EnforcedStyle: context_dependent
 
+Layout/FirstParameterIndentation:
+  EnforcedStyle: consistent
+
 Metrics/LineLength:
   Max: 128
   AllowURI: true
   URISchemes:
     - http
     - https
+
+Metrics/MethodLength:
+  Max: 20
+
