--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -1,7 +1,8 @@
 require: rubocop-rails
 
 AllCops:
-  TargetRubyVersion: 2.7.5
+  TargetRubyVersion: 2.6
+  NewCops: disable
   Exclude:
     - 'vendor/**/*'
     - 'node_modules/**/*'
@@ -40,22 +41,20 @@ Lint/AmbiguousBlockAssociation:
   Exclude:
     - "spec/**/*"
 
-Layout/IndentFirstHashElement:
+Layout/FirstHashElementIndentation:
   EnforcedStyle: 'consistent'
 
-Layout/AlignParameters:
+Layout/ParameterAlignment:
   EnforcedStyle: 'with_fixed_indentation'
 
 Layout/SpaceInsideBlockBraces:
   SpaceBeforeBlockParameters: false
 
-Style/BracesAroundHashParameters:
-  EnforcedStyle: context_dependent
 
-Layout/IndentFirstArgument:
+Layout/FirstArgumentIndentation:
   EnforcedStyle: consistent
 
-Metrics/LineLength:
+Layout/LineLength:
   Max: 128
   AllowURI: true
   URISchemes:
