--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -2,7 +2,6 @@ require: rubocop-rails
 
 AllCops:
   TargetRubyVersion: 2.6
-  NewCops: disable
   Exclude:
     - 'vendor/**/*'
     - 'node_modules/**/*'
@@ -41,20 +40,22 @@ Lint/AmbiguousBlockAssociation:
   Exclude:
     - "spec/**/*"
 
-Layout/FirstHashElementIndentation:
+Layout/IndentFirstHashElement:
   EnforcedStyle: 'consistent'
 
-Layout/ParameterAlignment:
+Layout/AlignParameters:
   EnforcedStyle: 'with_fixed_indentation'
 
 Layout/SpaceInsideBlockBraces:
   SpaceBeforeBlockParameters: false
 
+Style/BracesAroundHashParameters:
+  EnforcedStyle: context_dependent
 
-Layout/FirstArgumentIndentation:
+Layout/IndentFirstArgument:
   EnforcedStyle: consistent
 
-Layout/LineLength:
+Metrics/LineLength:
   Max: 128
   AllowURI: true
   URISchemes:
